--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.7.9",
+    "file-saver": "^2.0.5",
     "leaflet": "^1.9.4",
     "ol": "^10.3.1",
     "react": "^18.3.1",
