--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "simantep-2-0",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://simantepbareta.cloud/",
   "type": "module",
   "scripts": {
     "dev": "vite",
