--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "file-saver": "^2.0.5",
     "leaflet": "^1.9.4",
     "ol": "^10.3.1",
+    "plugin": "^0.3.3",
     "react": "^18.3.1",
+    "react-data-export": "^0.6.0",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^7.1.1"
+    "react-router-dom": "^7.1.1",
+    "rewrite": "^0.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
@@ -27,6 +30,6 @@
     "eslint-plugin-react": "^7.34.3",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
-    "vite": "^5.3.4"
+    "vite": "^5.4.14"
   }
 }
