--- a/package.json
+++ b/package.json
@@ -13,14 +13,17 @@
   "dependencies": {
     "axios": "^1.7.9",
     "file-saver": "^2.0.5",
+    "html2pdf.js": "^0.10.3",
     "leaflet": "^1.9.4",
     "ol": "^10.3.1",
     "plugin": "^0.3.3",
     "react": "^18.3.1",
     "react-data-export": "^0.6.0",
+    "react-datepicker": "^8.1.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.1",
-    "rewrite": "^0.0.1"
+    "rewrite": "^0.0.1",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
